<resources>
    <string name="app_name" translatable="false">Clubhouse</string>
    <string name="birthday_action" translatable="false">clubhouse_birthday_action</string>
    <string name="birthday_notification_action" translatable="false">
        clubhouse_notification_birthday_action
    </string>
    <string name="birthday_channel_id" translatable="false">clubhouse_notification</string>

    <string name="search_contacts">Search contacts…</string>
    <string name="photo">Photo</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="phone_2">Phone 2</string>
    <string name="email">Email</string>
    <string name="email_2">Email 2</string>
    <string name="description">Description</string>
    <string name="contact_list">Contact list</string>
    <string name="contact_details">Contact details</string>
    <string name="no_phone_number">No phone number</string>
    <string name="no_name">No name</string>
    <string name="no_description">No description</string>
    <string name="birthday_fmt">Birthday: %s</string>
    <string name="remind_about_birthday">Remind you about birthday?</string>
    <string name="remind">Remind</string>
    <string name="dont_remind">Don\'t remind</string>
    <string name="someone_has_birthday_today_fmt">%s has birthday today!</string>
    <string name="birthday_content_text">What about saying \'Hey\'?</string>
    <string name="birthday_channel_name">Birthday notification channel</string>
    <string name="birthday_channel_description">Welp, its name speaks for itself</string>
    <string name="happy_birthday">Happy birthday!</string>
    <string name="birthday_presents">Birthday presents!</string>
    <string name="getting_data_about_birthday_kid">Getting data about birthday kid…</string>
    <string name="getting_data_about_birthday_kids">Getting data about birthday kids…</string>
    <string name="ok">OK</string>
    <string name="we_beg_you">We beg you!</string>
    <string name="request_contact_read_permission">
        Please, permit the app to read your contacts.
    </string>
    <string name="request_contact_read_permission_again">
        We really need the permission to read your contacts. Without it, our app is pointless!
    </string>
    <string name="permit">Permit</string>
    <string name="refresh">Refresh</string>
    <string name="hello_world">Hello, World!</string>
    <string name="total_contacts">Total contacts: %d</string>
    <string name="loading">Loading…</string>
    <string name="error">An error occurred.</string>
    <string name="contact_location">Contact location</string>
    <string name="no_location_set">No location set</string>
    <string name="set">Set</string>
    <string name="change">Change</string>
    <string name="location_fmt">Location: %f, %f</string>
    <string name="clarify_card_controls_text">
        Tap the map to choose a location.
    </string>
    <string name="clarify_card_controls_ok">Clear!</string>
    <string name="edit_location">Edit location</string>
    <string name="view_location">View location</string>
    <string name="view_all_contacts_locations">View all contacts\' locations</string>
    <string name="navigate">Navigate</string>
    <string name="route">Route</string>
    <string name="navigation_sorry">Unfortunately, it was impossible to make a route between the selected contacts.</string>
    <string name="set_location_of_the_contact">First, set the contact location.</string>
    <string name="set_location_of_one_contact">First, set a location of at least one contact.</string>
    <string name="set_location_of_another_contact">First, set a location of at least another one contact.</string>
</resources>