<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/cardListPadding">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/cardImageViewSide"
        android:layout_height="@dimen/cardImageViewSide"
        android:layout_marginBottom="@dimen/cardListPadding"
        android:contentDescription="@string/we_beg_you"
        android:src="@drawable/ic_crying_emoji" />

    <TextView
        android:id="@+id/plea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/cardHorizontalMargin"
        android:gravity="center_horizontal"
        android:text="@string/request_contact_read_permission_again" />

    <Button
        android:id="@id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardListPadding"
        android:text="@string/permit" />
</LinearLayout>