<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/refreshView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cardPadding">

            <LinearLayout
                android:id="@+id/errorGroup"
                style="@style/ContactDetailsGroup"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <include layout="@layout/error_group" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/progressGroup"
                style="@style/ContactDetailsGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <include layout="@layout/progress_group" />
            </LinearLayout>

            <ImageView
                android:id="@+id/photo"
                android:layout_width="@dimen/cardImageViewSide"
                android:layout_height="@dimen/cardImageViewSide"
                android:contentDescription="@string/photo"
                android:src="@drawable/ic_baseline_person_24"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/cardImageViewSide"
                android:layout_marginHorizontal="@dimen/cardHorizontalMargin"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@id/photo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/phone1"
                style="@style/ContactDetailsListItem"
                android:text="@string/phone"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photo" />

            <TextView
                android:id="@+id/phone2"
                style="@style/ContactDetailsListItem"
                android:text="@string/phone_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone1" />

            <TextView
                android:id="@+id/email1"
                style="@style/ContactDetailsListItem"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone2" />

            <TextView
                android:id="@+id/email2"
                style="@style/ContactDetailsListItem"
                android:text="@string/email_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email1" />

            <TextView
                android:id="@+id/birthDate"
                style="@style/ContactDetailsListItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email2" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/cardImageViewSide"
                android:gravity="center_vertical"
                android:text="@string/description"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/birthDate" />

            <TextView
                android:id="@+id/clarifyRemind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remind_about_birthday"
                android:visibility="gone"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="@id/remindSwitch"
                app:layout_constraintEnd_toStartOf="@id/remindSwitch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/remindSwitch" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/remindSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/clarifyRemind"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <com.example.presentation.ui.views.EllipsizedTextView
                android:id="@+id/locationDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/viewLocation"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/remindSwitch" />

            <ImageView
                android:id="@+id/viewLocation"
                style="@style/MediumIconButton"
                android:contentDescription="@string/view_location"
                android:src="@drawable/ic_baseline_visibility_24"
                android:visibility="gone"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="@id/locationDescription"
                app:layout_constraintEnd_toStartOf="@id/editLocation"
                app:layout_constraintStart_toEndOf="@id/locationDescription"
                app:layout_constraintTop_toTopOf="@id/locationDescription" />

            <ImageView
                android:id="@+id/editLocation"
                style="@style/MediumIconButton"
                android:contentDescription="@string/edit_location"
                android:src="@drawable/ic_baseline_edit_24"
                android:visibility="gone"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="@id/locationDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/viewLocation"
                app:layout_constraintTop_toTopOf="@id/locationDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>